# python-django

./: .gitignore  orders-export.csv
Auth/myauth/: views.py
Auth/myfristsite/: settings.py  urls.py
Auth/shopapp/: urls.py
CBV/requestdataapp/: apps.py  forms.py  views.py
CBV/shopapp/: models.py  views.py
DRF/shopapp/: admin.py  forms.py  models.py  views.py
DatabaseAndModels/shopapp/: admin.py  models.py  urls.py  views.py
DjangoAdmin/shopapp/: models.py
DjangoDocs/: pyproject.toml
DjangoDocs/shopapp/: admin_mixins.py  models.py  views.py
DjangoIntro/myfristsite/: urls.py
DjangoIntro/shopapp/: views.py
Django_Cache/: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
Django_Cache/blogapp/: admin.py  urls.py
Django_Cache/myauth/: views.py
Django_Cache/myfristsite/: settings.py  sitemaps.py  (+1 more)
Docs/: pyproject.toml
Docs/locale/en/LC_MESSAGES/: django.po
Docs/myapiapp/: views.py
Docs/myauth/: forms.py  views.py
Docs/myauth/templates/myauth/: login.html
Docs/myfristsite/: wsgi.py
Docs/shopapp/: urls.py
Docs/shopapp/management/commands/: create_orders.py  update_order.py
Docs/shopapp/migrations/: 0004_order_user.py  0009_product_preview.py  0012_alter_product_options.py
Docs/shopapp/templates/shopapp/: shop_index.html
HTML_CSS/: index.html
REST/: pyproject.toml
RequestsAndMiddlewares/: pyproject.toml
import_export/: devices.csv  shopapp-fixtures.json  shopapp-product-fixtures.xml
logging/: docker-compose.yaml  log.txt
prod/: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
(+191 files in other folders)
